# advanced-gtk-techniques

./: .gitignore  Makefile  README  add-listings.py  autoconf-project.html  autoconf-project.page.in  automake-project.page.in  awesome.css  custom-container.page.in  custom.xslt  desktop-file.page.in  dynamic-actions.html  dynamic-actions.page.in  generate-dir-listings.py  gettext-project.html  gettext-project.page.in  highlight.pack.js  index.cache  index.css  index.html  index.page  introduction.page  mallard-mathml.xslt  real-life-app-setup.html  real-life-app-setup.page  real-life-app-writing.html  real-life-app-writing.page  real-life-app.page  skeleton-application.page.in  tutorial.tex
app-skeleton/: .gitignore  Makefile.am  configure.ac
app-skeleton/data/: Makefile.am  app-skeleton.ui
app-skeleton/src/: .gitignore  Makefile.am  main.c
app-skeleton1/: configure.ac  index.html
app-skeleton2/: Makefile.am  configure.ac  index.html
app-skeleton2/src/: .gitignore  Makefile.am  index.html
app-skeleton3/: Makefile.am  configure.ac  index.html
app-skeleton3/pixmaps/: index.html
app-skeleton3/pixmaps/16x16/: index.html
app-skeleton3/pixmaps/16x16/apps/: index.html
app-skeleton3/pixmaps/22x22/: index.html
app-skeleton3/pixmaps/22x22/apps/: index.html
app-skeleton3/pixmaps/24x24/: index.html
app-skeleton3/pixmaps/24x24/apps/: index.html
app-skeleton3/pixmaps/32x32/: index.html
app-skeleton3/pixmaps/32x32/apps/: index.html
app-skeleton3/pixmaps/48x48/: index.html
app-skeleton3/pixmaps/48x48/apps/: index.html
app-skeleton3/src/: Makefile.am  hello-world.c  index.html
app-skeleton4/: .gitignore  Makefile.am  app-skeleton.desktop  app-skeleton.desktop.in  configure.ac  index.html
app-skeleton4/pixmaps/: Makefile.am  index.html
app-skeleton4/pixmaps/16x16/: index.html
app-skeleton4/pixmaps/16x16/apps/: index.html
app-skeleton4/pixmaps/22x22/: index.html
app-skeleton4/pixmaps/22x22/apps/: index.html
app-skeleton4/pixmaps/24x24/: index.html
app-skeleton4/pixmaps/24x24/apps/: index.html
app-skeleton4/pixmaps/32x32/: index.html
app-skeleton4/pixmaps/32x32/apps/: index.html
app-skeleton4/pixmaps/48x48/: index.html
app-skeleton4/pixmaps/48x48/apps/: index.html
app-skeleton4/po/: .gitignore  Makevars  POTFILES.in  index.html  nl.po
app-skeleton4/src/: .gitignore  Makefile.am  hello-world.c  index.html
html/: C.css  autoconf-project.html  automake-project.html  custom-container.html  desktop-file.html  dynamic-actions.html  gettext-project.html  index.cache  index.html  introduction.html  real-life-app-setup.html  real-life-app-writing.html  yelp.js
infoapp1/: Makefile.am  autogen.sh  configure.ac  index.html  info-app.desktop.in
infoapp1/data/: Makefile.am  index.html  info-app.menus.xml  info-app.ui
infoapp1/pixmaps/: Makefile.am  index.html
infoapp1/pixmaps/16x16/: index.html
infoapp1/pixmaps/16x16/apps/: index.html
infoapp1/pixmaps/22x22/: index.html
infoapp1/pixmaps/22x22/apps/: index.html
infoapp1/pixmaps/24x24/: index.html
infoapp1/pixmaps/24x24/apps/: index.html
infoapp1/pixmaps/32x32/: index.html
infoapp1/pixmaps/32x32/apps/: index.html
infoapp1/pixmaps/48x48/: index.html
infoapp1/pixmaps/48x48/apps/: index.html
infoapp1/po/: Makevars  POTFILES.in  index.html  nl.po
infoapp1/src/: Makefile.am  index.html  main.c  pinfoapp.c  pinfoapp.h  pinfowidget.c  pinfowidget.h  pinfowindow.c  pinfowindow.h
psquare/: .gitignore  Makefile  index.html  psquare.c  psquare.h  test-psquare.c
rocky-raccoon/: .gitignore  Makefile  index.html  rocky-menus.xml  rocky.c  rocky.ui
